--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="main_activity_register">Registrar</string>
     <string name="main_activity_validation_names">Debe ingresar sus nombres</string>
     <string name="main_activity_validation_age">Debe ingresar su edad</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
