--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="main_activity_validation_age">Debe ingresar su edad</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragment_login_title">Iniciar Sesion</string>
+    <string name="fragment_login_helper_email">Correo electrónico</string>
+    <string name="fragment_login_helper_password">Contraseña</string>
+    <string name="fragment_login_button">Ingresar</string>
 </resources>
