--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="fragment_login_helper_email">Correo electrónico</string>
     <string name="fragment_login_helper_password">Contraseña</string>
     <string name="fragment_login_button">Ingresar</string>
+    <string name="fragment_login_remember_account">Recordar mi cuenta</string>
+    <string name="fragment_login_create_account">Crear Cuenta</string>
+    <string name="fragment_login_forget_password">¿Olvidaste tu contraseña?</string>
 </resources>
